--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -239,7 +239,7 @@ est_mean_var_clt <- est_pop_var_pooled/n_sample
 
 ## Estimating sample mean distribution variance
 
-In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (each $n$ = 5) from the population of people illustrated in Figure \@ref(fig:chdeepfigure1)A. The statistics for those three sample are presented below.
+In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (i.e., $a = 3$) and each sample has 5 people  (i.e., $n = 5$) from the population of people illustrated in Figure \@ref(fig:chdeepfigure1)A. The statistics for those three samples are presented below.
 
 | Sample Number | Sample size ($n$) | Mean ($\bar{x} = \frac{\Sigma x_i}{n}$) | Variance ($s_{people}^2=\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
 |:-------------:|:-----------------:|:---------------------------------------:|:--------------------------------------------------------------:|
