--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -228,7 +228,7 @@ dfpooled <- df+df2 + df3
 est_pop_var_pooled <- (est_pop_var+est_pop_var2+est_pop_var3)/3
 
 a <- 3
-xbarbar <- round(mean(barx+barxb+barxc), 3)
+xbarbar <- round(mean(c(barx,barxb,barxc)), 3)
 xbar_vector <- c(barx, barxb, barxc)
 method1_var <- round(var(xbar_vector),3)
 
