--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -4,7 +4,11 @@ output:
   html_document: default
 ---
 
-# Deep Dive: Sampling Distributions (Equal population means)
+# Deep Dive: Sampling Distributions 
+
+## Equal population means
+
+In this chapter we build from a one population scenario to a three population scenario where the three populations have the same mean.
 
 ## A tale of two methods
 
@@ -449,10 +453,6 @@ ggplot(data = data_ratios, mapping = aes(x = var_ratio)) +
 This graph illustrates the range of ratio values that can occur when there is a single population when we use 3 samples, $ a =3$, and a sample size of 5, $n = 5$.  More formally, there are 2, $(a -1)$, and 12, $a(n-1)$, degrees of freedom.
 
 ### Simulation 3 identical populations
-
-```{r sim3pop, out.width = "100%", echo=FALSE, fig.cap= "Sampling from three populations with the same mean (and variance)"}
-knitr::include_graphics("ch_deep_sampling/images/figure3.png")
-```
 
 
 | Population |  Mean        | Variance        |
