--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -455,6 +455,12 @@ This graph illustrates the range of ratio values that can occur when there is a 
 ### Simulation 3 identical populations
 
 
+```{r sim3pop, out.width = "100%", echo=FALSE, fig.cap= "Sampling from three populations with the same mean (and variance)"}
+knitr::include_graphics("ch_deep_sampling/images/figure3.png")
+```
+
+
+
 | Population |  Mean        | Variance        |
 |:----------:|:------------:|:----------------|
 | 1          | $\mu_{A1_{people}}= 172.50$ |  $\sigma_{A1_{people}}^2= 156.3236$ |
