--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -18,9 +18,32 @@ knitr::include_graphics("ch_deeper_sampling/images/pop_equal_means.png")
 
 | Population |  Mean        | Variance        |
 |:----------:|:------------:|:----------------|
-| 1          | $\mu_{1_{people}}= 172.50$ |  $\sigma_{1_{people}}^2= 156.3236$ |
-| 2          | $\mu_{2_{people}}= 172.50$ |  $\sigma_{2_{people}}^2= 156.3236$ |
-| 3          | $\mu_{3_{people}}= 172.50$ |  $\sigma_{3_{people}}^2= 156.3236$ |
+| 1          | $\mu_{A1_{people}}= 172.50$ |  $\sigma_{1_{people}}^2= 156.3236$ |
+| 2          | $\mu_{A2_{people}}= 172.50$ |  $\sigma_{2_{people}}^2= 156.3236$ |
+| 3          | $\mu_{A3_{people}}= 172.50$ |  $\sigma_{3_{people}}^2= 156.3236$ |
+
+
+We can think of there mean a mean of the population means:
+
+$$
+\begin{aligned} 
+\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{A} \\
+&=  \frac{\mu_{A1}+\mu_{A2}+\mu_{A3}}{A} \\
+&=  \frac{172.50 + 172.50 + 172.50}{3} \\
+&= \frac{517.50}{3}\\
+&= 172.50 \\
+\end{aligned}
+$$
+
+
+$$
+\begin{aligned} 
+\sigma_{\mu_A}^2 &=  \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{A} \\
+&=  \frac{(172.50 - 172.50)^2 + (172.50 - 172.50)^2 + (172.50 - 172.50)^2}{3} \\
+&=  \frac{0}{3} \\
+&=  0\\
+\end{aligned}
+$$
 
 
 
@@ -31,9 +54,30 @@ knitr::include_graphics("ch_deeper_sampling/images/pop_equal_means.png")
 | 2          | $\mu_{2_{people}}= 172.50$ |  $\sigma_{2_{people}}^2= 156.3236$ |
 | 3          | $\mu_{3_{people}}= 192.50$ |  $\sigma_{3_{people}}^2= 156.3236$ |
 
+$$
+\begin{aligned} 
+\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{A} \\
+&=  \frac{\mu_{A1}+\mu_{A2}+\mu_{A3}}{A} \\
+&=  \frac{152.50 + 172.50 + 192.50}{3} \\
+&= \frac{517.50}{3}\\
+&= 172.50 \\
+\end{aligned}
+$$
+
 
 $$
-\sigma_{\bar{x}}^2= \frac{\sigma_{people}^2}{n} + \sigma_{\mu}^2
+\begin{aligned} 
+\sigma_{\mu_A}^2 &=  \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{A} \\
+&=  \frac{(152.50 - 172.50)^2 + (172.50 - 172.50)^2 + (162.50 - 172.50)^2}{3} \\
+&=  \frac{20^2 + 0 + 20^2}{3} \\
+&=  0\\
+\end{aligned}
+$$
+
+
+
+$$
+\sigma_{\bar{x}}^2= \frac{\sigma_{people}^2}{n} + \sigma_{\mu_A}^2
 $$
 
 
