--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -66,7 +66,7 @@ $$
 \begin{aligned} 
 \sum_{i=1}^{N}{(X_i - \bar{X})^2} &= (X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2\\ 
 &= (110-110)^2 + (120-110)^2 + (100-110)^2\\
-&= (0)^2 + (10)^2 (-10)^2 \\
+&= (0)^2 + (10)^2 + (-10)^2 \\
 &= 0 + 100 + 100 \\
 &= 200
 \end{aligned} 
@@ -78,7 +78,7 @@ $$
 \begin{aligned} 
 \sum{(X - \bar{X})^2} &= (X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2\\ 
 &= (110-110)^2 + (120-110)^2 + (100-110)^2\\
-&= (0)^2 + (10)^2 (-10)^2 \\
+&= (0)^2 + (10)^2 + (-10)^2 \\
 &= 0 + 100 + 100 \\
 &= 200
 \end{aligned} 
@@ -201,7 +201,7 @@ $$
 \sigma^2 &= \frac{\sum{(X - \mu)^2}}{N}\\
 &= \frac{(X_1-\mu)^2 + (X_2-\mu)^2 + (X_3-\mu)^2}{N}  \\ 
 &= \frac{(8-10)^2 + (10-10)^2 + (12-10)^2}{3}\\
-&= \frac{(-2)^2 + (0)^2 (2)^2}{3} \\
+&= \frac{(-2)^2 + (0)^2 + (2)^2}{3} \\
 &= \frac{4 + 0 + 4}{3} \\
 &= \frac{8}{3} \\
 &= 2.67 grams^2 \\
